force-app/main/default/objects/leaseworks__Lease_Extension_History__c/leaseworks__Lease_Extension_History__c.object-meta.xml
<CustomObject>
    <description>Table to keep track of Month To Month Changing Of Lease End Date. Source FTIA Project Plan.

Changed from Extension to Term based on Sebastian&#39;s feedback. Ref: Asana - Lease Term History instead of Lease Extension History. 12/1/14</description>
    <label>Lease Update History</label>
    <nameField>
        <label>Lease Update Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lease Update History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>