force-app/main/default/objects/leaseworks__Lease_Extension_History__c/fields/leaseworks__Comment__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Comment__c</fullName>
    <description>Comment about the lease date change</description>
    <inlineHelpText>Comment about the lease date change</inlineHelpText>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>