force-app/main/default/objects/leaseworks__Lease_Extension_History__c/fields/leaseworks__Date_of_Amendment__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_of_Amendment__c</fullName>
    <inlineHelpText>Date the change comes into effect.</inlineHelpText>
    <label>Date of Amendment</label>
    <type>Date</type>
</CustomField>