force-app/main/default/objects/leaseworks__Lease_Extension_History__c/fields/leaseworks__Date_Updated__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_Updated__c</fullName>
    <label>Date Updated</label>
    <type>Date</type>
</CustomField>