force-app/main/default/objects/leaseworks__Lease_Extension_History__c/fields/leaseworks__Lease_End_Date_Time_Changed_To__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_End_Date_Time_Changed_To__c</fullName>
    <description>The date and time to which lease end date was updated to.</description>
    <inlineHelpText>The date and time to which lease end date was updated to.</inlineHelpText>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>