force-app/main/default/objects/leaseworks__Lease_Extension_History__c/fields/leaseworks__New_Lessor_Bank_for_Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__New_Lessor_Bank_for_Rent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the new Lessor Ban for Rent</inlineHelpText>
    <label>Z_Unused_2106 New Lessor Bank for Rent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lease Update History (New Lessor Bank for Rent)</relationshipLabel>
    <relationshipName>Lease_Update_History2</relationshipName>
    <type>Lookup</type>
</CustomField>