force-app/main/default/objects/leaseworks__Lease_Extension_History__c/fields/leaseworks__New_Lessor_Bnk_for_MR__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__New_Lessor_Bnk_for_MR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Lessor Bank for MR</label>
    <referenceTo>leaseworks__Bank_Account__c</referenceTo>
    <relationshipLabel>Lease Update History</relationshipLabel>
    <relationshipName>Lease_Update_History</relationshipName>
    <type>Lookup</type>
</CustomField>