force-app/main/default/objects/leaseworks__Lease_Extension_History__c/fields/leaseworks__New_Managing_Company__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__New_Managing_Company__c</fullName>
    <label>New Managing Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>