force-app/main/default/objects/leaseworks__Lease_Extension_History__c/fields/leaseworks__Previous_Guarantor__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Previous_Guarantor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Unused_2206 Previous Guarantor</label>
    <referenceTo>leaseworks__Bank__c</referenceTo>
    <relationshipLabel>Lease Update History (Previous Guarantor)</relationshipLabel>
    <relationshipName>Lease_Update_History3</relationshipName>
    <type>Lookup</type>
</CustomField>