force-app/main/default/objects/leaseworks__Lease_Extension_History__c/fields/leaseworks__Previous_Head_Lessor_I__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Previous_Head_Lessor_I__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Head Lessor I</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lease Update History (Previous Head Lessor I)</relationshipLabel>
    <relationshipName>Lease_Update_HistoryTm7S</relationshipName>
    <type>Lookup</type>
</CustomField>