force-app/main/default/objects/leaseworks__Lease_Extension_History__c/fields/leaseworks__Previous_Lease_End_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Previous_Lease_End_Date__c</fullName>
    <inlineHelpText>Previous Lease End Date</inlineHelpText>
    <label>Previous Lease End Date</label>
    <type>Date</type>
</CustomField>