force-app/main/default/objects/leaseworks__Lease_Extension_History__c/fields/leaseworks__Previous_Lessor_Bank_for_Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Previous_Lessor_Bank_for_Rent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Unused_2106 PreviousLessorBankforRent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lease Update History (Previous Lessor Bank for Rent)</relationshipLabel>
    <relationshipName>Lease_Update_History3</relationshipName>
    <type>Lookup</type>
</CustomField>