force-app/main/default/objects/leaseworks__Lease_Extension_History__c/fields/leaseworks__Security_Trustee__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Security_Trustee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Security Trustee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lease Update History (New Security Trustee)</relationshipLabel>
    <relationshipName>Lease_Update_History5</relationshipName>
    <type>Lookup</type>
</CustomField>