force-app/main/default/objects/leaseworks__Lease_Extension_History__c/fields/leaseworks__Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Type__c</fullName>
    <description>Picklist values are hard coded and CSMs/Users cannot add additional values.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lease Extension</fullName>
            </value>
            <value>
                <fullName>Lease Amendment</fullName>
            </value>
            <value>
                <fullName>Side Letter</fullName>
            </value>
            <value>
                <fullName>Novation</fullName>
            </value>
            <value>
                <fullName>Lease Restructure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>