force-app/main/default/objects/leaseworks__Lease_Extension_History__c/recordTypes/leaseworks__Lease_Amendment.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Lease_Amendment</fullName>
    <active>true</active>
    <label>Lease Amendment</label>
</RecordType>