force-app/main/default/objects/leaseworks__Lease_Extension_History__c/recordTypes/leaseworks__Lease_Restructure.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Lease_Restructure</fullName>
    <active>true</active>
    <label>Lease Restructure</label>
</RecordType>