force-app/main/default/objects/leaseworks__Lease_Extension_History__c/recordTypes/leaseworks__Novation.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Novation</fullName>
    <active>true</active>
    <label>Novation</label>
</RecordType>