force-app/main/default/objects/leaseworks__Lease_Extension_History__c/recordTypes/leaseworks__Side_Letter.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Side_Letter</fullName>
    <active>true</active>
    <label>Side Letter</label>
</RecordType>